<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="5dp"
    android:foregroundTint="@android:color/background_light"
    app:cardBackgroundColor="@android:color/holo_blue_dark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:foregroundTint="@android:color/background_light">


        <TextView
            android:id="@+id/de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="24dp"
            android:text="@string/DE"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ce" />

        <TextView
            android:id="@+id/ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="24dp"
            android:text="@string/CE"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/c1e" />

        <TextView
            android:id="@+id/c1e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/C1E"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d" />

        <TextView
            android:id="@+id/be"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/BE"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/d1"
            app:layout_constraintTop_toBottomOf="@+id/c1" />

        <TextView
            android:id="@+id/d1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/D1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/d"
            app:layout_constraintTop_toBottomOf="@+id/c" />

        <TextView
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/C1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/c"
            app:layout_constraintTop_toBottomOf="@+id/a1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/D"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1" />

        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/C"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b1"
            app:layout_constraintTop_toBottomOf="@+id/a"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:text="P"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/serial"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/A"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/validUntil" />

        <TextView
            android:id="@+id/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/A1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/a"
            app:layout_constraintTop_toBottomOf="@+id/validUntil" />

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/B"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/a1"
            app:layout_constraintTop_toBottomOf="@+id/validFrom" />

        <TextView
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/B1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a" />

        <TextView
            android:id="@+id/validFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/valid_from"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthDate" />

        <TextView
            android:id="@+id/validUntil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/valid_until"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/validFrom"
            app:layout_constraintTop_toBottomOf="@+id/birthPlace" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/sex"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/pid"
            app:layout_constraintTop_toBottomOf="@+id/surname" />

        <TextView
            android:id="@+id/serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/serial"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/residence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/residence"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/sex"
            app:layout_constraintTop_toBottomOf="@+id/surname" />

        <TextView
            android:id="@+id/birthPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/birthPlace"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/birthDate"
            app:layout_constraintTop_toBottomOf="@+id/residence" />

        <TextView
            android:id="@+id/pid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pid"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/surname"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serial" />

        <TextView
            android:id="@+id/birthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/birthDate"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pid" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>